# homelab

./: .gitignore  AGENTS.md  APP_TEST.md  MIGRATION_GUIDE.md  README.md  renovate.json  test-app-file.txt
.github/: copilot-instructions.md
.github/workflows/: build-openclaw.yml  build-opencode.yml  kube-lint.yml  update_cloudflare_settings.yml
apps/: longhorn.yml
apps/aiometadata/: aiometadata-deployment.yml  aiometadata-pvcs.yml  aiometadata-redis-deployment.yml  aiometadata-redis-service.yml  aiometadata-service.yml
apps/aiostreams/: aiostreams-deployment.yml  aiostreams-pvc.yml  aiostreams-service.yml
apps/argocd/: appset-helm.yml  appset.yml  argocd.yml  kustomization.disabled  kustomization.yml
apps/audiobookshelf/: audiobookshelf-deployment.yml  audiobookshelf-pvcs.yml  audiobookshelf-service.yml
apps/base/: README.md  deployment-base.yaml  kustomization.yaml  service-base.yaml
apps/bentopdf/: bentopdf-deployment.yml  bentopdf-service.yml
apps/books/: stacks-pvc.yml  (+5 more)
openclaw/: Dockerfile
opencode/: Dockerfile
portwatcher/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
portwatcher/portwatcher/: asgi.py  settings.py  urls.py  wsgi.py
portwatcher/scanner/: admin.py  models.py  tasks.py  urls.py  views.py
portwatcher/scanner/management/commands/: scan_hosts.py
portwatcher/scanner/migrations/: 0001_initial.py
portwatcher/scanner/templates/scanner/: base.html  detail.html  overview.html
portwatcher/scanner/templates/scanner/partials/: host_cards.html
portwatcher/scripts/: entrypoint.sh
(+236 files in other folders)
